; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libwiikeyboard/extr_usbkeyboard.c_USBKeyboard_Close.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libwiikeyboard/extr_usbkeyboard.c_USBKeyboard_Close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@_kbd = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @USBKeyboard_Close() #0 {
  %1 = load %struct.TYPE_3__*, %struct.TYPE_3__** @_kbd, align 8
  %2 = icmp ne %struct.TYPE_3__* %1, null
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %16

4:                                                ; preds = %0
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** @_kbd, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, -1
  br i1 %8, label %9, label %13

9:                                                ; preds = %4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** @_kbd, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = call i32 @USB_CloseDevice(i32* %11)
  br label %13

13:                                               ; preds = %9, %4
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** @_kbd, align 8
  %15 = call i32 @free(%struct.TYPE_3__* %14)
  store %struct.TYPE_3__* null, %struct.TYPE_3__** @_kbd, align 8
  br label %16

16:                                               ; preds = %13, %3
  ret void
}

declare dso_local i32 @USB_CloseDevice(i32*) #1

declare dso_local i32 @free(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
